HTML steganography, change analytics, and a few other things I'm too dumb to remember

--- a/_config.yml
+++ b/_config.yml
@@ -52,6 +52,10 @@ moving:
 #theme: moving # note, please use huangyz0918/moving if you want to publish to Github Pages.
 remote_theme: huangyz0918/moving # note, please use huangyz0918/moving if you want to publish to Github Pages.
 
+markdown: kramdown
+kramdown:
+    math_engine: katex
+
 plugins:
   - jekyll-feed
   - jekyll-seo-tag
